# realsense-capture

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: convert2benchmark.py  main.cpp  remote.py
